2015-02-02 Riccardo Mottola <rm@gnu.org>

	* fileTable.m (containsFileName)
	* fileTable.h
	Added method containsFileName to check if the current table stores a file with the same name

2014-05-27 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Make file size parsing more robust, checking for () with NSBackwardSearch.

2013-10-19 Riccardo Mottola <rm@gnu.org>

	* localclient.m
	* ftpclient.m
	Update file after renaming.

	* AppController.m
	Add created folder to remote directory listing.

2013-10-19 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Cleanup debug logs.

2013-10-19 Riccardo Mottola <rm@gnu.org>

	* fileElement.h
	* fileElement.m
	Path and name setters.

2013-07-28 Riccardo Mottola <rm@gnu.org>

	* fileTable.h
	* fileTable.m
	File path setter.

2013-07-27 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* fileTable.m
        Make copy of selection before file transfer. Update table after store and retrieve.

2013-07-14 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* Resources/FTP.gorm
	Remote/Local refresh

2013-07-12 Riccardo Mottola <rm@gnu.org>

	* AppController.h (readDirWith)
	* AppController.m
	Factor out code for reading directory contents into table and view.

2013-07-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m (localDelete, remoteDelete)
	Make a copy of selection before performing deletion.

2013-07-11 Riccardo Mottola <rm@gnu.org>

	* fileTable.[h,m]
	Improve object remove methods regarding sorting array sync, factor sortedArray generation out.

2013-07-09 Riccardo Mottola <rm@gnu.org>

	* fileTable.[h,m]
	Object add and remove methods.

2013-06-27 Riccardo Mottola <rm@gnu.org>

	* GetNameController.h
	* GetNameController.m
        Handle return also in case of window closure through window button.

2013-06-11 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Actually create a new folder, local and remote.

2013-06-11 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	* ftpclient.h